@@ -1,0 +1,36 @@
+<?xml version="1.0"?><project>
+  <parent>
+    <artifactId>powermock-examples</artifactId>
+    <groupId>org.powermock.examples</groupId>
+    <version>0.9-SNAPSHOT</version>
+  </parent>
+  <modelVersion>4.0.0</modelVersion>
+  <groupId>org.powermock.examples.apachecli</groupId>
+  <artifactId>powermock-examples-apachecli</artifactId>
+  <name>ApacheCLIExample</name>
+  <version>0.9-SNAPSHOT</version>
+  <url>http://maven.apache.org</url>
+ <dependencies>
+      <dependency>
+           <groupId>commons-cli</groupId>
+           <artifactId>commons-cli</artifactId>
+           <version>1.1</version>
+      </dependency> 
+      <dependency>
+         <groupId>org.powermock.modules</groupId>
+         <artifactId>powermock-module-junit4</artifactId>
+         <scope>test</scope>
+      </dependency>
+      <dependency>
+         <groupId>junit</groupId>
+         <artifactId>junit</artifactId>
+         <version>4.4</version>
+         <scope>test</scope>
+      </dependency>
+      <dependency>
+         <groupId>org.easymock</groupId>
+         <artifactId>easymockclassextension</artifactId>
+         <scope>test</scope>
+      </dependency>
+   </dependencies>
+</project>
